# celery-rabbitmq-learn

./: .gitignore  pyproject.toml
core/: celery.py  settings.py
